# misc-cpp-stuff

./: .gitignore  CMakeLists.txt  README.md  RtAudio.cpp  audio.cc  decode.cc  encode.cc  encode_audio.cc  lint.py  main.cc  output.cc  rt.cc  run.sh  safety.cc  transcode.cc  transmuxing.cc
lib/: CMakeLists.txt  shape.cc
